<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="14dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:gravity="center"
        android:text="@string/self_gratitude_journal"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:elevation="6dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <TextView
            android:id="@+id/gratefulText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/aclonica"
            android:text="@string/what_are_you_grateful_for_today"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textAllCaps="true"
        android:textStyle="italic"
        android:textColor="@android:color/holo_red_dark"
        android:background="@android:color/transparent" />


</LinearLayout>